force-app/main/default/objects/pcldm__Entity_Log__c/pcldm__Entity_Log__c.object-meta.xml
<CustomObject>
    <label>Entity Log</label>
    <nameField>
        <label>Entity Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>