force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Api_Version__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Api_Version__c</fullName>
    <label>Api Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>