force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Deactivated_on__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Deactivated_on__c</fullName>
    <label>Deactivated on</label>
    <type>DateTime</type>
</CustomField>