force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Entity_Id__c</fullName>
    <label>Entity Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>