force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Execution_Log__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Execution_Log__c</fullName>
    <label>Execution Log</label>
    <referenceTo>pcldm__Execution_Log__c</referenceTo>
    <relationshipLabel>Entity Logs</relationshipLabel>
    <relationshipName>Entity_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>