force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Object_API__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Object_API__c</fullName>
    <label>Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>