force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Reactivated_On__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Reactivated_On__c</fullName>
    <label>Reactivated On</label>
    <type>DateTime</type>
</CustomField>