force-app/main/default/objects/pcldm__Entity_Log__c/fields/pcldm__Type__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>